# Pacbot-2-fa-25

./: .gitignore  README.md
bot_client/: gameState.py  pacbotAgent.py
server/: .gitignore  Dockerfile
server/game-rs/: Cargo.toml
server/game-rs/src/: state.rs
server/game_rs/: Cargo.toml  Dockerfile  docker-compose.yml  test_game.py
server/game_rs/src/: ghost_state.rs  lib.rs  mod.rs  state.rs
server/game_rs/src/pyo3_bindings/: mod.rs  state_py.rs
server/pac-venv/: pyvenv.cfg
