[package]
name = "game-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lib]
name = "game_rs"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "game_rs"
